--- a/HealthClub/templates/physio-slim/gallery.html
+++ b/HealthClub/templates/physio-slim/gallery.html
@@ -1,5 +1,5 @@
-{% load static %}
 {% extends 'physio-slim/main.html' %}
+{% load static %}
 {% block body %}
 
 	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url({% static 'images/gallerycover.jpg' %});" data-stellar-background-ratio="0.5">
@@ -10,7 +10,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Gallery</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co" target="_blank">freehtml5.co</a></h2>
+							<h2><a href="#" target="_blank"></a></h2>
 						</div>
 					</div>
 				</div>
