branches cards styling

--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -5,8 +5,8 @@
 <!-- vedio -->
 	<header id="fh5co-header" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
         <video autoplay muted loop id="bg-video">
-            <source src="https://www.googleapis.com/drive/v3/files/1RcOkTX3C9i_DR48mttUzQ3_DAqnMO9Un?alt=media&key=AIzaSyA1nnbfS1OB5fFNSCs3w-kKd5klqFtJeHE" type="video/mp4" />
-        </video>
+				<source src="https://www.googleapis.com/drive/v3/files/1RcOkTX3C9i_DR48mttUzQ3_DAqnMO9Un?alt=media&key=AIzaSyA1nnbfS1OB5fFNSCs3w-kKd5klqFtJeHE" type="video/mp4" />
+			</video>
 		<div class="overlay">
             <div class="container">
                 <div class="row">
@@ -29,27 +29,27 @@
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
-						<span><img class="img-responsive" src="{% static 'images/ballet.svg' %}" alt="hello"></span>
+						<span><img class="img-responsive" src="{% static 'images/fayoum.svg' %}" alt="" style="width: 35%;"></span>
                         
-						<h3>Weight Lifting</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius</p>
-						<p><a href="#" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
+						<h3>Fayoum 1</h3>
+						<p>Men, Women & kids</p>
+						<p><a href="{% url 'branch' 1 %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
-						<span><img class="img-3" src="{% static 'images/exercise.svg' %}" alt=""></span>
-						<h3>Running</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius</p>
-						<p><a href="#" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
+						<span><img class="img-3" src="{% static 'images/fayoum.svg' %}" alt="" style="width: 35%;"></span>
+						<h3>Fayoum 2</h3>
+						<p>Men & Women</p>
+						<p><a href="{% url 'branch' 2 %}"class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 					</div>
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
-						<span><img class="img-responsive" src="{% static 'images/yoga-carpet.svg' %}" alt=""></span>
-						<h3>Yoga</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius</p>
-						<p><a href="#" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
+						<span><img class="img-responsive" src="{% static 'images/fayoum.svg' %}" alt="" style="width: 35%;"></span>
+						<h3>Bani Suif</h3>
+						<p>Ladies Only</p>
+						<p><a href="{% url 'branch' 3 %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 					</div>
 				</div>
 			</div>
