--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -172,34 +172,33 @@
 						{% endif %}
 					</div>
 					<div class="col-md-8">
-						<h3>Classes</h3>
+
+						
 						<div class="col-md-4 col-sm-4 col-xs-6">
+							<h3>Classes</h3>
 							<ul class="fh5co-footer-links">
 								<li><a href="#">Cardio</a></li>
 								<li><a href="#">Body Building</a></li>
-								<li><a href="#">Yoga</a></li>
-								<li><a href="#">Boxing</a></li>
+								<li><a href="#">Zumba</a></li>
+								<li><a href="#">Kick Boxing</a></li>
+								<li><a href="#">CrossFit</a></li>
+							</ul>
+						</div>
+	
+						<div class="col-md-4 col-sm-4 col-xs-6">
+							<h3>Clinics</h3>
+							<ul class="fh5co-footer-links">
+								<li><a href="#">Physical Therapy</a></li>
+								<li><a href="#">Nutrition</a></li>
+
+							</ul>
+						</div>
+
+						<div class="col-md-4 col-sm-4 col-xs-6">
+							<h3>Events</h3>
+							<ul class="fh5co-footer-links">
+								<li><a href="#">Cycling</a></li>
 								<li><a href="#">Running</a></li>
-							</ul>
-						</div>
-
-						<div class="col-md-4 col-sm-4 col-xs-6">
-							<ul class="fh5co-footer-links">
-								<li><a href="#">Boxing</a></li>
-								<li><a href="#">Martial Arts</a></li>
-								<li><a href="#">Karate</a></li>
-								<li><a href="#">Kungfu</a></li>
-								<li><a href="#">Basketball</a></li>
-							</ul>
-						</div>
-
-						<div class="col-md-4 col-sm-4 col-xs-6">
-							<ul class="fh5co-footer-links">
-								<li><a href="#">Badminton</a></li>
-								<li><a href="#">Body Building</a></li>
-								<li><a href="#">Teams</a></li>
-								<li><a href="#">Advertise</a></li>
-								<li><a href="#">API</a></li>
 							</ul>
 						</div>
 					</div>
