--- a/HealthClub/templates/physio-slim/offers.html
+++ b/HealthClub/templates/physio-slim/offers.html
@@ -10,7 +10,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Fitness Trainer</h1>
+							<h1>Offers</h1>
 							
 						</div>
 					</div>
@@ -24,17 +24,16 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Trainers</h2>
+					<h2>Offers</h2>
 				</div>
 			</div>
 			<div class="row">
-				{% for trainer in trainers %}
+				{% for offer in offers %}
 				<div class="col-md-4 col-sm-4 animate-box" style="padding-bottom: 5%;">
 					<div class="trainer">
-						<a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{trainer.photo}}" alt="trainer"></a>
-						<p class="px-4">asdasiduashdiuahs huasuidh uiiuas duisdiu</p>
+						<a href="#"><img class="img-responsive" src="{{MEDIA_URL}}/{{offer.photo}}" alt="trainer"></a>
 						<div class="title">
-							<h3><a href="#">{{trainer.name}}</a></h3>
+							<h3><a href="#">{{offer.name}}</a></h3>
 							<span>{{trainer.bio}}</span>
 							<span>{{trainer.years_of_experience}}</span>
 						</div>
