--- a/HealthClub/PhysioSlim/static/css/bell.css
+++ b/HealthClub/PhysioSlim/static/css/bell.css
@@ -1,14 +1,14 @@
   .box::-webkit-scrollbar-track
   {
       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-      background-color: #F5F5F5;
+      background-color: #fff;
       border-radius: 5px
   }
   
   .box::-webkit-scrollbar
   {
       width: 10px;
-      background-color: #F5F5F5;
+      background-color: #fff;
       border-radius: 5px
   }
   
@@ -66,16 +66,17 @@
   }
   
   .box{
-    width: 400px;
+    z-index:10;
+    width: 280px;
     height: 0px;
     border-radius: 10px;
     transition: 0.5s;
     position: absolute;
     overflow-y: scroll;
     padding: 0px;
-    left: -300px;
+    left: -200px;
     margin-top: 5px;
-    background-color: #F4F4F4;
+    background-color: #fff;
     -webkit-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.1);
     box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.1);
@@ -91,14 +92,14 @@
   }
   
   .content{
-    padding: 20px;
+    /* padding: 20px; */
     color: black;
     vertical-align: middle;
     text-align: left;
   }
   
   .gry{
-    background-color: #F4F4F4;
+    background-color: #fff;
   }
   
   .top{
@@ -115,7 +116,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #F4F4F4;
+    background-color: #fff;
   }
   
   .cont:empty{
@@ -140,14 +141,15 @@
   }
   
   .sec{
-    padding: 25px 10px;
-    background-color: #F4F4F4;
+    /* padding: 25px 10px; */
+    background-color: #fff;
     transition: 0.5s;
   }
   
   
   .txt{
     vertical-align: top;
+    color:black;
     font-size: 1.25rem;
     padding: 5px 10px 0px 115px;
   }
@@ -163,7 +165,7 @@
   }
   
   .sec:hover{
-    background-color: #BFBFBF;
+    background-color: #fde303;
   }
   
   
