--- a/HealthClub/templates/physio-slim/bell.html
+++ b/HealthClub/templates/physio-slim/bell.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block bell %}
 
-    <div class = "notification">
+    <div class = "notification ">
       <a href = "#">
       <div class = "notBtn" href = "#">
         <!--Number supports double digets and automaticly hides itself when there is nothing between divs -->
@@ -17,7 +17,8 @@
               <div class = "cont">
                 {% for notification in notifications %}
                   {% if notification.notification_type == 1 %}
-                    <div class = "sec new">
+                    <div class = "sec 'new'">
+                      <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                       <a href = "{% url 'ClassNotifications' notification.id notification.Class.id %}">
                       <div class = "txt">New {{notification.Class}} Class ! </div>
                       <div class = "txt sub">{{notification.created_on}}</div>
@@ -26,6 +27,7 @@
 
                     {% elif notification.notification_type == 2 %}
                     <div class = "sec">
+                      <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                       <a href = "{% url 'EventNotifications' notification.id notification.Event.id %}">
                       <div class = "txt">New {{notification.Event}} Event !</div>
                       <div class = "txt sub">{{notification.created_on}}</div>
@@ -33,6 +35,7 @@
                     </div>
                     {% elif notification.notification_type == 3 %}
                     <div class = "sec">
+                      <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                       <a href = "{% url 'TrainerNotifications' notification.id notification.trainer.id %}">
                       <div class = "txt">New {{notification.trainer}} Personal Trainer !</div>
                       <div class = "txt sub">{{notification.created_on}}</div>
@@ -40,6 +43,7 @@
                     </div>
                     {% elif notification.notification_type == 4 %}
                     <div class = "sec">
+                      <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                       <a href = "{% url 'OfferNotifications' notification.id notification.Offer.id %}">
                       <div class = "txt">New {{notification.Offer}} Offer ! </div>
                       <div class = "txt sub">{{notification.created_on}}</div>
