--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -51,8 +51,7 @@
 	<link rel="stylesheet" href="{% static 'css/show_notifications.css' %}">
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js' %}"></script>
-	<!-- Notifications -->
-	<script src="{% static 'js/notification.js' %}"></script>
+	
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -115,7 +114,7 @@
 									</ul>
 								</li>
 								{% block bell %}
-								{% include 'physio-slim/show_notifications.html' %}
+								{% include 'physio-slim/bell.html' %}
 								{% endblock %}
                                 {% endif %}
                             </ul>
@@ -238,6 +237,8 @@
 	<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
 	<script src="{% static 'js/magnific-popup-options.js' %}"></script>
 	<script src="{% static 'js/main.js' %}"></script>
+	<!-- Notifications -->
+	<script src="{% static 'js/notification.js' %}"></script>
 	
     </div>
 </body>
