--- a/HealthClub/templates/physio-slim/show_notifications.html
+++ b/HealthClub/templates/physio-slim/show_notifications.html
@@ -5,13 +5,17 @@
     <ul class="dropdown">
     {% for notification in notifications %}
         {% if notification.notification_type == 1 %}
-            <li> <a href="{% url 'ClassNotifications' notification.id notification.Class.id %}">New {{notification.Class}} Class ! </a></li>
+            <li><a href="{% url 'ClassNotifications' notification.id notification.Class.id %}">New {{notification.Class}} Class ! </a></li>
+            <span class="dropdown-item-close" onclick="removeNotification(`{% url 'RemoveNotifications' notification.id %}`, `{{ request.path }}`)">&times;</span>
         {% elif notification.notification_type == 2 %}
             <li><a href="{% url 'EventNotifications' notification.id notification.Event.id %}">New {{notification.Event}} Event ! </a></li>
+            <span class="dropdown-item-close" onclick="removeNotification(`{% url 'RemoveNotifications' notification.id %}`, `{{ request.path }}`)">&times;</span>
         {% elif notification.notification_type == 3 %}
-            <li><a href="{% url 'TrainerNotifications' notification.id notification.trainer.id %}">New {{notification.trainer}} Personal Trainer ! </a></li>   
+            <li><a href="{% url 'TrainerNotifications' notification.id notification.trainer.id %}">New {{notification.trainer}} Personal Trainer ! </a></li>
+            <span class="dropdown-item-close" onclick="removeNotification(`{% url 'RemoveNotifications' notification.id %}`, `{{ request.path }}`)">&times;</span>  
         {% elif notification.notification_type == 4 %}
-            <li>  <a href="{% url 'OfferNotifications' notification.id notification.Offer.id %}">New {{notification.Offer}} Offer ! </a></li>
+            <li><a href="{% url 'OfferNotifications' notification.id notification.Offer.id %}">New {{notification.Offer}} Offer ! </a></li>
+            <span class="dropdown-item-close" onclick="removeNotification(`{% url 'RemoveNotifications' notification.id %}`, `{{ request.path }}`)">&times;</span>
         {% endif %}
     {% endfor %}
     </ul>
