--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -52,7 +52,6 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Fitness Expert</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -83,8 +82,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Pricing Plan</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2> Physio Slim Offers For {{ branch }}</h2>
+					<p>Welcome in our Gym for any more information Contact Us </p>
 				</div>
 			</div>
 			<div class="row">
