clinic and kids section in home page

--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -216,7 +216,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Happy Clients</h2>
+					<h2>Other </h2>
 				</div>
 			</div>
 			<div class="row">
@@ -225,28 +225,18 @@
 						
 						<div class="owl-carousel owl-carousel-fullwidth">
 							<div class="item">
-								<video autoplay muted loop id="bg-video">
+								<video autoplay muted loop id="bg-video" style="object-fit: contain; width: 100%;">
 									<source
-									  src="https://www.googleapis.com/drive/v3/files/1RcOkTX3C9i_DR48mttUzQ3_DAqnMO9Un?alt=media&key=AIzaSyA1nnbfS1OB5fFNSCs3w-kKd5klqFtJeHE"
+									  src="{% static 'videos/clinic.mp4' %}"
 									  type="video/mp4"
 									/>
 								  </video>	
 							</div>
 							<div class="item">
 								<div class="testimony-slide active text-center">
-									<video autoplay muted loop id="bg-video">
+									<video autoplay muted loop id="bg-video" style="object-fit: contain; width: 100%;">
 										<source
-										  src="https://www.googleapis.com/drive/v3/files/1RcOkTX3C9i_DR48mttUzQ3_DAqnMO9Un?alt=media&key=AIzaSyA1nnbfS1OB5fFNSCs3w-kKd5klqFtJeHE"
-										  type="video/mp4"
-										/>
-									  </video>	
-								</div>
-							</div>
-							<div class="item">
-								<div class="testimony-slide active text-center">
-									<video autoplay muted loop id="bg-video">
-										<source
-										  src="https://www.googleapis.com/drive/v3/files/1RcOkTX3C9i_DR48mttUzQ3_DAqnMO9Un?alt=media&key=AIzaSyA1nnbfS1OB5fFNSCs3w-kKd5klqFtJeHE"
+										  src="{% static 'videos/kids.mp4' %}"
 										  type="video/mp4"
 										/>
 									  </video>	
