--- a/HealthClub/PhysioSlim/static/css/style.css
+++ b/HealthClub/PhysioSlim/static/css/style.css
@@ -148,10 +148,10 @@ h1, h2, h3, h4, h5, h6, figure {
     display: none;
   }
 }
-.fh5co-nav ul {
+/* .fh5co-nav ul {
   padding: 0;
   margin: 5px 0 0 0;
-}
+} */
 .fh5co-nav ul li {
   padding: 0;
   margin: 0;
