--- a/HealthClub/PhysioSlim/static/css/bell.css
+++ b/HealthClub/PhysioSlim/static/css/bell.css
@@ -1,172 +1,181 @@
-  .box::-webkit-scrollbar-track
-  {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-      background-color: #fff;
-      border-radius: 5px
-  }
-  
-  .box::-webkit-scrollbar
-  {
-      width: 10px;
-      background-color: #fff;
-      border-radius: 5px
-  }
-  
-  .box::-webkit-scrollbar-thumb
-  {
-      background-color: black;
-      border: 2px solid black;
-      border-radius: 5px
-  }
-  
-  
-  .icons{
-    display: inline;
-    float: right
-  }
-  
-  .notification{
-    /* border: #F5F5F5 solid 1px ; */
-    /* padding-top: 30px; */
-    position: relative;
-    display: inline-block;
-  }
-  
-  .number{
-    height: 25px;
-    width:  25px;
-    background-color: #d63031;
-    border-radius: 25px;
-    color: white;
-    text-align: center;
-    position: absolute;
-    top: 15px;
-    left: 35px;
-    /* padding: 3px; */
-    border-style: solid;
-    border-width: 1px;
-  }
-  
-  .number:empty {
-     display: none;
-  }
-  
-  .notBtn{
-    transition: 0.5s;
-    cursor: pointer
-  }
-  
-  .fas{
-   
-    font-size: 25pt;
-    padding-bottom: 5px;
-    color: black;
-    margin-right: 10px;
-    margin-left: 10px;
-  }
-  
-  .box{
-    z-index:10;
-    width: 280px;
-    height: 0px;
-    border-radius: 10px;
-    transition: 0.5s;
-    position: absolute;
-    overflow-y: scroll;
-    padding: 0px;
-    left: -200px;
-    margin-top: 5px;
+.box::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #fff;
-    -webkit-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.2);
-    -moz-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.1);
-    box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.1);
-    cursor: context-menu;
-  }
-  
-  .fas:hover {
-    color: #d63031;
-  }
-  
-  .notBtn:hover > .box{
-    height: 60vh
-  }
-  
-  .content{
-    /* padding: 20px; */
-    color: black;
-    vertical-align: middle;
-    text-align: left;
-  }
-  
-  .gry{
+    border-radius: 5px
+}
+
+.box::-webkit-scrollbar
+{
+    width: 10px;
     background-color: #fff;
-  }
-  
-  .top{
-    color: black;
-    padding: 10px
-  }
-  
-  .display{
-    position: relative;
-  }
-  
-  .cont{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-  }
-  
-  .cont:empty{
-    display: none;
-  }
-  
-  .stick{
-    text-align: center;  
-    display: block;
-    font-size: 50pt;
-    padding-top: 70px;
-    padding-left: 80px
-  }
-  
-  .stick:hover{
-    color: black;
-  }
-  
-  .cent{
-    text-align: center;
-    display: block;
-  }
-  
-  .sec{
-    /* padding: 25px 10px; */
-    background-color: #fff;
-    transition: 0.5s;
-  }
-  
-  
-  .txt{
-    vertical-align: top;
-    color:black;
-    font-size: 1.25rem;
-    padding: 5px 10px 0px 115px;
-  }
-  
-  .sub{
-    font-size: 1rem;
-    color: grey;
-  }
-  
-  .new{
-    border-style: none none solid none;
-    border-color: red;
-  }
-  
-  .sec:hover{
-    background-color: #fde303;
-  }
-  
-  
-  
+    border-radius: 5px
+}
+
+.box::-webkit-scrollbar-thumb
+{
+    background-color: black;
+    border: 2px solid black;
+    border-radius: 5px
+}
+
+
+.icons{
+  display: inline;
+  float: right
+}
+
+.notification{
+  /* border: #F5F5F5 solid 1px ; */
+  /* padding-top: 30px; */
+  position: relative;
+  display: inline-block;
+}
+
+.number{
+  height: 20px;
+  width:  20px;
+  background-color: #d63031;
+  border-radius: 25px;
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 17px;
+  left: 32px;
+  /* padding: 3px; */
+  border-style: solid;
+  border-width: 1px;
+}
+
+.number:empty {
+   display: none;
+}
+
+.notBtn{
+  transition: 0.5s;
+  cursor: pointer
+}
+
+.fas{
+ 
+  font-size: 20pt;
+  /* padding-bottom: 5px; */
+  color: black;
+  /* margin-right: 10px; */
+  margin-left: 10px;
+}
+
+.box{
+  z-index:10;
+  width: 350px;
+  height: 0px;
+  border-radius: 10px;
+  transition: 0.5s;
+  position: absolute;
+  overflow-y: scroll;
+  padding: 0px;
+  left: -200px;
+  margin-top: 5px;
+  background-color: #fff;
+  -webkit-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.1);
+  box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.1);
+  cursor: context-menu;
+}
+
+.fas:hover {
+  color: #d63031;
+}
+
+.notBtn:hover > .box{
+  height: 60vh
+}
+
+.content{
+  /* padding: 20px; */
+  color: black;
+  vertical-align: middle;
+  text-align: left;
+}
+
+.gry{
+  background-color: #fff;
+}
+
+.top{
+  color: black;
+  padding: 10px
+}
+
+.display{
+  position: relative;
+}
+
+.cont{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+.profCont{
+  padding-left: 20px;
+}
+
+.profile{
+  -webkit-clip-path: circle(50% at 50% 50%);
+  clip-path: circle(50% at 50% 50%);
+  width: 75px;
+  float: left;
+}
+.cont:empty{
+  display: none;
+}
+
+.stick{
+  text-align: center;  
+  display: block;
+  font-size: 50pt;
+  padding-top: 70px;
+  padding-left: 80px
+}
+
+.stick:hover{
+  color: black;
+}
+
+.cent{
+  text-align: center;
+  display: block;
+}
+
+.sec{
+  /* padding: 25px 10px; */
+  background-color: #fff;
+  transition: 0.5s;
+}
+
+
+.txt{
+  vertical-align: top;
+  color:black;
+  font-size: 3rem;
+  padding: 5px 10px 0px 115px;
+}
+
+.sub{
+  font-size: 1.5rem;
+  color: grey;
+}
+
+.new{
+  border-style: none none solid none;
+  border-color: red;
+}
+
+.sec:hover{
+  background-color: #fde303;
+}
+
+
+
