--- a/HealthClub/templates/physio-slim/contact.html
+++ b/HealthClub/templates/physio-slim/contact.html
@@ -17,9 +17,7 @@
 			</div>
 		</div>
 	</header>
-	<div id="map" class="fh5co-map"></div>
-		<!-- END map -->
-	
+
 	<div id="fh5co-contact">
 		<div class="container">
 			<div class="row">
@@ -28,9 +26,9 @@
 				{% for branch in branches %}
 				<div class="col-md-4 col-md-push-1 animate-box">
 					<div class="fh5co-contact-info" style="padding-top: 10%;">
-						<h3>{{branch.name}}</h3>
+						<h3> {{branch.name}} </h3>
 						<ul>
-							<li class="address">{{branch.address}}</li>
+							<li class="address" dir="rtl" lang="ar">{{branch.address}}</li>
 							<li class="phone"><a href="tel://{{branch.phone}}">{{branch.phone}}</a></li>	
 						</ul>
 					</div>
@@ -43,4 +41,8 @@
 		</div>
 	</div>
 
+		<!-- Google map -->
+		<div id="map" class="fh5co-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6379.928182223894!2d30.84136752486255!3d29.321043988821152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145979228850f9db%3A0x3dd62b50badb041b!2sphysio%20slim%20gym!5e0!3m2!1sen!2seg!4v1646850935220!5m2!1sen!2seg" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+		<!-- END map -->
+	
 {% endblock %}
