--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -5,6 +5,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title> Physio Slim Gym </title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
@@ -90,9 +91,9 @@
 								<li class="has-dropdown">
 									<a href="#">Branches</a>
 									<ul class="dropdown">
-										<li><a href="{% url 'branch' 1 %}">Fayoum 1</a></li>
-										<li><a href="{% url 'branch' 2 %}">Fayoum 2 </a></li>
-										<li><a href="{% url 'branch' 3 %}">Bani suif</a></li>
+										{% for branch in branches %}
+										<li><a href="{% url 'branch' branch.id %}">{{branch.name}}</a></li>
+										{% endfor %}
 									</ul>
 								</li>
 
@@ -115,13 +116,13 @@
 												<li><a href="{% url 'logout' %}">Logout</a></li>
 												{% endif %}
 											{% endif %}
-										{% endif %}
-										
-									</ul>
-								</li>
-								{% block bell %}
-								{% include 'physio-slim/bell.html' %}
-								{% endblock %}
+										</ul>
+									</li>
+									{% if request.user.is_superuser %}
+									{% block bell %}
+									{% include 'physio-slim/bell.html' %}
+									{% endblock %}
+									{% endif %}
                                 {% endif %}
                             </ul>
                         </div>
@@ -132,19 +133,6 @@
         </nav>
     <!-- End Navigation -->
 	
-        {% block body %}
-		 {% endblock %}
-	<!-- offer  -->
-	<div id="fh5co-started" class="fh5co-bg" style="background-image: url(images/img_bg_3.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2>Fitness Classes this Summer <br> <span> Pay Now and <br> Get <span class="percent">35%</span> Discount</span></h2>
-				</div>
-			</div>
-		</nav>
-		<!-- End Navigation -->
 
 		{% block body %}
 		{% endblock %}
