clinic and kids section in home page

--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -216,7 +216,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Other </h2>
+					<h2>Other Features</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -225,6 +225,9 @@
 						
 						<div class="owl-carousel owl-carousel-fullwidth">
 							<div class="item">
+								<div class="col-md-8 col-md-offset-2 text-center text-uppercase">
+									<h2>Physio care</h2>
+								</div>
 								<video autoplay muted loop id="bg-video" style="object-fit: contain; width: 100%;">
 									<source
 									  src="{% static 'videos/clinic.mp4' %}"
@@ -232,7 +235,11 @@
 									/>
 								  </video>	
 							</div>
+							
 							<div class="item">
+								<div class="col-md-8 col-md-offset-2 text-center text-uppercase">
+									<h2>Physio kids</h2>
+								</div>
 								<div class="testimony-slide active text-center">
 									<video autoplay muted loop id="bg-video" style="object-fit: contain; width: 100%;">
 										<source
@@ -241,6 +248,8 @@
 										/>
 									  </video>	
 								</div>
+
+								
 							</div>
 						</div>
 					</div>
