--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -32,31 +32,16 @@
 	<div id="fh5co-services" class="fh5co-bg-section">
 		<div class="container">
 			<div class="row">
+				{% for branch in branches %}
 				<div class="col-md-4 text-center animate-box">
 					<div class="services">
 						<span><img class="img-responsive" src="{% static 'images/fayoum.svg' %}" alt="" style="width: 35%;"></span>
-                        
-						<h3>Fayoum 1</h3>
-						<p>Men, Women & kids</p>
-						<p><a href="{% url 'branch' 1 %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
+						<h3>{{branch.name}}</h3>
+						<p>{{branch.description}}</p>
+						<p><a href="{% url 'branch' branch.id %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
 					</div>
 				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span><img class="img-3" src="{% static 'images/fayoum.svg' %}" alt="" style="width: 35%;"></span>
-						<h3>Fayoum 2</h3>
-						<p>Men & Women</p>
-						<p><a href="{% url 'branch' 2 %}"class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
-					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span><img class="img-responsive" src="{% static 'images/fayoum.svg' %}" alt="" style="width: 35%;"></span>
-						<h3>Bani Suif</h3>
-						<p>Ladies Only</p>
-						<p><a href="{% url 'branch' 3 %}" class="btn btn-primary btn-outline btn-sm">More <i class="icon-arrow-right"></i></a></p>
-					</div>
-				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
