clinic and kids section in home page

--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -211,7 +211,7 @@
 		</div>
 	</div>
 	<!-- end gallery -->
-	<!-- happy clients -->
+	<!-- other features -->
 	<div id="fh5co-testimonial" class="fh5co-bg-section">
 		<div class="container">
 			<div class="row animate-box">
@@ -257,6 +257,6 @@
 			</div>
 		</div>
 	</div>
-<!-- end happy clients -->
+<!-- end oher features -->
 
 {% endblock %}
