--- a/HealthClub/PhysioSlim/static/css/bell.css
+++ b/HealthClub/PhysioSlim/static/css/bell.css
@@ -35,9 +35,9 @@
 .number{
   height: 20px;
   width:  20px;
-  background-color: #d63031;
+  background-color: #fde303;
   border-radius: 25px;
-  color: white;
+  color: #000;
   text-align: center;
   position: absolute;
   top: 17px;
@@ -84,7 +84,7 @@
 }
 
 .fas:hover {
-  color: #d63031;
+  color: #fde303;
 }
 
 .notBtn:hover > .box{
