--- a/HealthClub/templates/physio-slim/bell.html
+++ b/HealthClub/templates/physio-slim/bell.html
@@ -43,7 +43,7 @@
                 {% elif notification.notification_type == 3 %}
                 <div class = "sec">
                   <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
-                  <a href = "{% url 'TrainerNotifications' notification.id notification.trainer.id %}">
+                  <a href = "{% url 'TrainerNotifications' notification.id notification.trainer.id notification.trainer.branch_id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.trainer.photo}} " alt="hello">
                   </div>
@@ -54,11 +54,22 @@
                 {% elif notification.notification_type == 4 %}
                 <div class = "sec">
                   <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
-                  <a href = "{% url 'OfferNotifications' notification.id notification.Offer.id %}">
+                  <a href = "{% url 'OfferNotifications' notification.id notification.Offer.id notification.Offer.branch_id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.Offer.photo}} " alt="hello">
                   </div>
                   <div class = "txt">New {{notification.Offer}} Offer ! </div>
+                  <div class = "txt sub">{{notification.created_on}}</div>
+                  </a>
+                </div>
+                {% elif notification.notification_type == 5 %}
+                <div class = "sec">
+                  <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
+                  <a href = "{% url 'MOfferNotifications' notification.id notification.MainOffer.id %}">
+                  <div class = "profCont">
+                  <img class = "profile"  src="{{MEDIA_URL}}/{{notification.MainOffer.photo}} " alt="hello">
+                  </div>
+                  <div class = "txt">New {{notification.MainOffer}} Offer ! </div>
                   <div class = "txt sub">{{notification.created_on}}</div>
                   </a>
                 </div>
