--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -9,7 +9,7 @@
 >
   <video autoplay muted loop id="bg-video">
     <source
-      src="https://www.googleapis.com/drive/v3/files/1RcOkTX3C9i_DR48mttUzQ3_DAqnMO9Un?alt=media&key=AIzaSyA1nnbfS1OB5fFNSCs3w-kKd5klqFtJeHE"
+      src="{% static 'videos/intro.mp4' %}"
       type="video/mp4"
     />
   </video>
