--- a/HealthClub/PhysioSlim/static/css/bell.css
+++ b/HealthClub/PhysioSlim/static/css/bell.css
@@ -74,7 +74,7 @@
   position: absolute;
   overflow-y: scroll;
   padding: 0px;
-  left: -200px;
+  right: 0%;
   margin-top: 5px;
   background-color: #fff;
   -webkit-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.2);
@@ -159,12 +159,12 @@
 .txt{
   vertical-align: top;
   color:black;
-  font-size: 3rem;
+  font-size: 1.5rem;
   padding: 5px 10px 0px 115px;
 }
 
 .sub{
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: grey;
 }
 
