--- a/HealthClub/templates/physio-slim/bell.html
+++ b/HealthClub/templates/physio-slim/bell.html
@@ -3,7 +3,6 @@
   
 
 <div class = "notification ">
-  <a href = "#">
   <div class = "notBtn" href = "#">
     <!--Number supports double digets and automaticly hides itself when there is nothing between divs -->
     <div class = "number">{{ notifications.count }}</div>
@@ -18,8 +17,8 @@
           <div class = "cont">
             {% for notification in notifications %}
               {% if notification.notification_type == 1 %}
+              <a class=" text-danger float-end" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                 <div class = "sec 'new'">
-                  <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                   <a href = "{% url 'ClassNotifications' notification.id notification.Class.id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.Class.photo}} " alt="hello">
@@ -28,10 +27,9 @@
                   <div class = "txt sub">{{notification.created_on}}</div>
                   </a>
                 </div>
-
                 {% elif notification.notification_type == 2 %}
+                <a class=" text-danger float-end" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                 <div class = "sec">
-                  <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                   <a href = "{% url 'EventNotifications' notification.id notification.Event.id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.Event.photo}} " alt="hello">
@@ -41,8 +39,8 @@
                   </a>
                 </div>
                 {% elif notification.notification_type == 3 %}
+                <a class=" text-danger float-end" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                 <div class = "sec">
-                  <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                   <a href = "{% url 'TrainerNotifications' notification.id notification.trainer.id notification.trainer.branch_id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.trainer.photo}} " alt="hello">
@@ -52,8 +50,8 @@
                   </a>
                 </div>
                 {% elif notification.notification_type == 4 %}
+                <a class=" text-danger float-end" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                 <div class = "sec">
-                  <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                   <a href = "{% url 'OfferNotifications' notification.id notification.Offer.id notification.Offer.branch_id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.Offer.photo}} " alt="hello">
@@ -63,8 +61,8 @@
                   </a>
                 </div>
                 {% elif notification.notification_type == 5 %}
+                <a class=" text-danger float-end" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                 <div class = "sec">
-                  <a class="dropdown-item-close" href="{% url 'RemoveNotifications' notification.id %}">&times;</a>
                   <a href = "{% url 'MOfferNotifications' notification.id notification.MainOffer.id %}">
                   <div class = "profCont">
                   <img class = "profile"  src="{{MEDIA_URL}}/{{notification.MainOffer.photo}} " alt="hello">
@@ -79,7 +77,6 @@
   </div>
 </div>
 </div>
-</a>
 </div>
 
 
