--- a/HealthClub/templates/physio-slim/branch.html
+++ b/HealthClub/templates/physio-slim/branch.html
@@ -3,7 +3,7 @@
 {% block body %}
 <header id="fh5co-header" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
   <video autoplay muted loop id="bg-video">
-    <source src="{% static 'videos/intro.mp4' %}" type="video/mp4" />
+    <source src="{% static 'videos/introBranch1.mp4' %}" type="video/mp4" />
   </video>
   <div class="overlay">
     <div class="container">
