fixing branch errors, frontend modifications

--- a/HealthClub/templates/physio-slim/about.html
+++ b/HealthClub/templates/physio-slim/about.html
@@ -34,9 +34,11 @@
 									<figure>
 										<img src="{% static 'images/about1.jpeg' %}" alt="Owner">
 									</figure>
-									<span>Dr. Mahmoud Mostafa Okel <a href="{% url 'contact' %}" class="twitter">Contact Us.</a></span>
+									<span>Dr. Mahmoud Mostafa Okel </span>
 									<blockquote>
+										<p>&ldquo; Fonder of Physio Slim &rdquo;</p>
 										<p>&ldquo; Specialized in Physical Therapy. &rdquo;</p>
+										<span><a href="{% url 'contact' %}" class="twitter">Contact Us.</a></span>
 									</blockquote>
 								</div>
 							</div>
