--- a/HealthClub/templates/physio-slim/index.html
+++ b/HealthClub/templates/physio-slim/index.html
@@ -139,8 +139,8 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url({{MEDIA_URL}}/{{image.img}});" >
 							<a href="{% url 'gallery' %}">
 								<div class="case-studies-summary">
-									<span>{{image.description}}</span>
-									<h2>{{image.name}}</h2>
+									<h2>{{image.description}}</h2>
+									<span>{{image.name}}</span>
 								</div>
 							</a>
 						</li>
