--- a/HealthClub/templates/physio-slim/offers.html
+++ b/HealthClub/templates/physio-slim/offers.html
@@ -20,47 +20,47 @@
 	</div>
 </header> -->
 
-	
+
 <div id="fh5co-pricing">
 	<div class="container">
-	  <div class="row animate-box">
-		<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-		  <h2> Offers </h2>
-		  <p></p>
-		</div>
-	  </div>
-	  <div class="row">
-		<div class="pricing">
-		  {% for offer in offers %}
-		  <div class="col-md-3 animate-box">
-			<div class="price-box">
-			  <h2 class="pricing-plan">{{offer.name}}</h2>
-			  <div class="price"><sup class="currency"></sup>{{offer.discount}} % 
-				<small>
-					{% if offer.number_of_months is 1 %}
-					per month 
-
-					 {% elif offer.number_of_months is 12 %}
-					 per year 
-					{% else %}
-					{{ offer.number_of_months }} months
-					{% endif %}
-				</small></div>
-			  <ul class="classes">
-				<li><b> {{offer.days_num  }} per week </b></li>
-				<li>  {{offer.num_of_class}} class </li>
-			  </ul>
-			  <a href="{% url 'contact' %}" class="btn btn-select-plan btn-sm">Select Plan</a>
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<h2> Offers </h2>
+				<p></p>
 			</div>
-		  </div>
-		  {% endfor %}
 		</div>
-	  </div>
-	  <a href="{% url 'offers' branch.id %}" class="btn btn-primary btn-outline btn-sm">
-		More <i class="icon-arrow-right"></i>
-	  </a>
+		<div class="row">
+			<div class="pricing">
+				{% for offer in offers %}
+				<div class="col-md-4 col-lg-3 animate-box">
+					<div class="price-box">
+						<h2 class="pricing-plan">{{offer.name}}</h2>
+						<div class="price"><sup class="currency"></sup>{{offer.discount}} %
+							<small>
+								{% if offer.number_of_months is 1 %}
+								per month
+
+								{% elif offer.number_of_months is 12 %}
+								per year
+								{% else %}
+								{{ offer.number_of_months }} months
+								{% endif %}
+							</small>
+						</div>
+						<ul class="classes">
+							<li><b> {{offer.days_num }} per week </b></li>
+							<li> {{offer.num_of_class}} class </li>
+						</ul>
+						<a href="{% url 'contact' %}" class="btn btn-select-plan btn-sm">Select Plan</a>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+
+		</a>
 	</div>
-  </div>
+</div>
 
 
 {% endblock %}
