modifying personaltrainer model, removing photo field

--- a/HealthClub/templates/physio-slim/about.html
+++ b/HealthClub/templates/physio-slim/about.html
@@ -46,11 +46,14 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/person3.jpg" alt="user">
+										<img src="images/person3.jpg" alt="">
 									</figure>
-									<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+									<span>How it started </span>
 									<blockquote>
-										<p>&ldquo;Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+										<p>&ldquo;
+											In 2016 we Dreamt about starting a HealthClub to spread the idea of exercising, physical therapy,
+											and how exercising and the right nutrition can directly affect a person's life, 
+											.&rdquo;</p>
 									</blockquote>
 								</div>
 							</div>
