--- a/HealthClub/templates/physio-slim/classes.html
+++ b/HealthClub/templates/physio-slim/classes.html
@@ -30,7 +30,7 @@
 			<div class="col-md-4 text-center animate-box">
 
 				<div class="services">
-					<span><img class="img-responsive image" src="{{MEDIA_URL}}/{{class.photo}} " alt="hello"></span>
+					<span><img class="img-responsive image" src="{{MEDIA_URL}}/{{class.photo}} " alt=""></span>
 
 					<h3> {{class.Class}}</h3>
 
