--- a/HealthClub/templates/physio-slim/main.html
+++ b/HealthClub/templates/physio-slim/main.html
@@ -169,8 +169,9 @@
 				<div class="row row-pb-md">
 					<div class="col-md-4 fh5co-widget">
 						<h3>A Little About Physio Slim.</h3>
-						<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.
-							Eos cumque dicta adipisci architecto culpa amet.</p>
+						<p> Physio Slim is known as a is professional fitness home. 
+							We are here to provide effective and best solutions for all aged people and with high quality and 
+							performance equipment and classes</p>
 						{% if request.user.is_anonymous %}
 						<p><a class="btn btn-primary" href="{% url 'register' %}">Become A Member</a></p>
 						{% endif %}
