updating about page

--- a/HealthClub/templates/physio-slim/about.html
+++ b/HealthClub/templates/physio-slim/about.html
@@ -52,7 +52,8 @@
 									<blockquote>
 										<p>&ldquo;
 											In 2016 we Dreamt about starting a HealthClub to spread the idea of exercising, physical therapy,
-											and how exercising and the right nutrition can directly affect a person's life, 
+											and how exercising and the right nutrition can directly affect a person's life.
+											Now with our <b>Three</b> Branches, we tend to serve more clients, and help them achieve their goals
 											.&rdquo;</p>
 									</blockquote>
 								</div>
